💄 Fix spacing issues

--- a/components/home/hero/hero.scss
+++ b/components/home/hero/hero.scss
@@ -11,7 +11,6 @@
     grid-column: 1 / 5;
 
     @media (min-width: $md) {
-      padding-top: $module-divider-lg;
       padding-bottom: $module-divider-lg;
       padding-left: 0;
 
